--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Process/Create.cshtml
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Process/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ProcessViewModel</h4>
+        <h4>Process</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsOverNightProcess, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Over Night Process", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.IsOverNightProcess)
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CompletedStatusText, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Completed Status Text", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CompletedStatusText, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CompletedStatusText, "", new { @class = "text-danger" })
