--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Process/Deactivate.cshtml
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Process/Deactivate.cshtml
@@ -1,12 +1,13 @@
 ﻿@model ViewState.ProcessScheduler.ViewModels.ProcessViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Deactivate";
     Layout = "~/Views/Shared/_LayoutPageSetUp.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Deactivate</h2>
 
+<h3>Are you sure you want to deactivate this?</h3>
 <div>
     <h4>Process</h4>
     <hr />
@@ -52,8 +53,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Deactivate" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
