--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Shared/_LayoutPageSetUp.cshtml
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Shared/_LayoutPageSetUp.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Country", "Index", "Country")</li>
+                    <li>@Html.ActionLink("Process", "Index", "Process")</li>
+                    <li>@Html.ActionLink("Departments", "Index", "Department")</li>
                 </ul>
             </div>
         </div>
