--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Country/Index.cshtml
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Country/Index.cshtml
@@ -66,7 +66,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Deactivate", new { id = item.ID })
+                @Html.ActionLink("Deactivate", "Deactivate", new { id = item.ID })
             </td>
         </tr>
     }
