--- a/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Shared/_LayoutPageSetUp.cshtml
+++ b/ViewState.ProcessScheduler/ViewState.ProcessScheduler.Web/Views/Shared/_LayoutPageSetUp.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Country", "Index", "Country")</li>
                     <li>@Html.ActionLink("Process", "Index", "Process")</li>
                     <li>@Html.ActionLink("Departments", "Index", "Department")</li>
+                    <li>@Html.ActionLink("Staff", "Index", "Staff")</li>
                 </ul>
             </div>
         </div>
